add create sale, purchase, receipt and other

--- a/apps/tally/src/app/app.component.html
+++ b/apps/tally/src/app/app.component.html
@@ -1,9 +1,19 @@
 <div style="text-align: center">
-  <h1>Welcome to tally!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png"
-    alt="Nx - Smart, Fast and Extensible Build System"
-  />
+  <h1>Welcome to Tally Utility</h1>
 </div>
-<div>Message: {{ hello$ | async | json }}</div>
+<div class="center">
+  <tally-utility-app-tray> </tally-utility-app-tray>
+</div>
+<div class="center">
+  <router-outlet></router-outlet>
+</div>
+<br />
+<br />
+<br />
+<br />
+
+<footer>
+  <div class="footer">
+    Author: <strong>SONAL KUMAR</strong>. Email: sonalkr.78@gmail.com
+  </div>
+</footer>
