fix : tmp, upload file location

--- a/apps/tally/src/app/convertor-form/convertor-form.component.html
+++ b/apps/tally/src/app/convertor-form/convertor-form.component.html
@@ -21,7 +21,7 @@
 <a
   class="download"
   *ngIf="download_file.message"
-  href="/assets/r_data/{{ download_file.message }}"
+  href="/api/tmp/{{ download_file.message }}"
   download="{{ name }} entry.xml"
   >Click to download {{ name }} entry</a
 >
